[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/common/MetroidvaniaDetectArea.gd" type="Script" id=1]

[node name="MetroidDetectArea" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource( 1 )

[node name="DetectAreaCollision" type="CollisionShape2D" parent="."]
one_way_collision = true

[node name="Boundary" type="Node" parent="."]

[node name="TopLeftBoundary" type="Position2D" parent="Boundary"]

[node name="BottomRightBoundary" type="Position2D" parent="Boundary"]
[connection signal="body_exited" from="." to="." method="_on_MetroidDetectArea_body_exited"]
